--- a/style.css
+++ b/style.css
@@ -1,75 +1,77 @@
-body {
-  background-image:url(metofuji.jpeg);
-  background-size:cover;
-  background-repeat:no-repeat;
-  padding-top: 10px;
-  background-position: center-center;
+html, body {
+    width: 100%;
+    height: 100%;
+    margin: 0;
 }
-.name h1{
-  position:absolute;
-  top: 5%;
-  left: 30%;
-  color: black; 
-  font-family: helvetica;
-  font-size: 100px;
-  font-weight: bold;
-}
-.about p{
-  position: absolute;
-  top: 30%;
-  left: 30%;
-  color: black; 
-  font-family: helvetica;
-  font-size: 18px;
-  font-weight: light;
-  margin: 60px auto;
-  width: 40%;
+html {
+    font-family: "helvetica neue", sans-serif;
 }
 
-nav ul, footer ul {
-    font-family:'Helvetica', 'Arial', 'Sans-Serif';
-    padding: 0px;
-    list-style: none;
-    font-weight: bold;
-    position: fixed;
-    left: 30px;
+.nav {
+    text-align: right;
+    height: 70px;
+    line-height: 70px;
 }
-nav ul li, footer ul li {
-    display: margin-right: 0px;
+.menu {
+    margin: 0 30px 0 0;
 }
-a {
+.menu a {
+    clear: right;
     text-decoration: none;
     color: black;
-    font-family:'Helvetica', 'Arial', 'Sans-Serif';
-    font-size: 1.45em;
+    margin: 0 10px;
+    line-height: 70px;
+    font-size: 30px;
+    font-weight: bold;
 }
-a:hover {
+
+a: hover{
     text-decoration: underline;
 }
-h1 {
-    font-size: 3em;
-    font-family:'Helvetica', 'Arial', 'Sans-Serif';
+label {
+    margin: 0 40px 0 0;
+    font-size: 26px;
+    line-height: 70px;
+    display: none;
+    width: 26px;
+    float: right;
 }
-h2 {
-    font-size; 2em;
-    font-family:'Helvetica', 'Arial', 'Sans-Serif';
-}
-h3 {
-    font-size; 1.80em;
-    font-family:'Helvetica', 'Arial', 'Sans-Serif';
-}
-
-p {
-    font-size: 1.25em;
-    line-height: 1.25em;
-    font-family:'Calibri', 'Arial', 'Sans-Serif';
+#toggle {
+    display: none;
 }
 
-ul.posts { 
-    margin: 20px auto 40px; 
-    font-size: 1.5em;
+
+@media only screen and (max-width: 500px) {
+    label {
+        display: block;
+        cursor: pointer;
+    }
+    .menu {
+        text-align: center;
+        width: 100%;
+        height: 100%;
+        display: none;
+      
+    }
+    .menu a {
+        display: block;
+        border-bottom: 1px solid #EAEAEB;
+        margin: 0;
+     
+    }
+    #toggle:checked + .menu {
+        display: block;
+    }
+    
+    
 }
 
-ul.posts li {
-    list-style: none;
-}
+
+
+
+
+
+
+
+
+
