--- a/main.css
+++ b/main.css
@@ -1,10 +1,48 @@
+.dropbtn {
+  color: black;
+  font-size: 30px;
+  font-weight: bold;
+  border: none;
+  background-color: transparent;
+}
+
+.dropdown {
+  position: relative;
+  display: inline-block;
+}
+
+.dropdown-content {
+  display: none;
+  position: absolute;
+  min-width: 250px;
+  box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+  z-index: 1;
+  
+}
+
+.dropdown-content a {
+  color: black;
+  text-decoration: underline;
+  display: block;
+  font-size: 15px;
+  text-align: left;
+  background-color: white;
+}
+
+
+.dropdown:hover .dropdown-content {display: block;}
+
+.dropdown:hover .dropbtn {text-decoration:underline;}
+
 html, body {
     width: 100%;
     height: 100%;
     margin: 0;
-}
-html {
-    font-family: "helvetica neue", sans-serif;
+    background-image: url(metofuji.jpeg);
+   background position: center center;
+   background-repeat: no-repeat;
+   background-size: cover;
+   font-family: "helvetica neue", sans-serif;
 }
 
 .nav {
@@ -51,12 +89,14 @@ label {
         width: 100%;
         height: 100%;
         display: none;
-      
     }
     .menu a {
         display: block;
         border-bottom: 1px solid #EAEAEB;
         margin: 0;
+        background-color:red;
+        z-index: 0;
+        
      
     }
     #toggle:checked + .menu {
@@ -66,7 +106,19 @@ label {
     
 }
 
+.about span{
+   font-size: 60px;
+   margin: 60px auto;
+   width: 70%;
+   font-weight: bold;
+}
 
+.about p{
+  font-size: 25px;
+  margin: 60px auto;
+  width: 70%;
+   
+}
 
 
 
